<resources>
    <string name="app_name">Guess Game</string>
    <string name="reset">RESTART</string>
    <string name="play_again">Play Again</string>
    <string name="select_a_number_to_start_the_game">Select a number to start the game.</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
</resources>