<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.nakul.guess_game.viewmodel.MainViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/open_sans_bold"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/yellow"
            android:textSize="36sp"
            app:layout_constraintTop_toTopOf="parent"
            app:textAllCaps="true" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/select_a_number_to_start_the_game"
            android:textColor="@color/yellow"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/gridLayout"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="32dp"
            android:columnCount="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tile1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="8dp"
                android:background="@drawable/shown_tile"
                android:fontFamily="@font/open_sans_bold"
                android:gravity="center"
                android:onClick="@{()->vm.selectNum(1)}"
                android:text="@string/_1"
                android:textColor="@color/yellow"
                android:textSize="56sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tile2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="8dp"
                android:background="@drawable/shown_tile"
                android:fontFamily="@font/open_sans_bold"
                android:gravity="center"
                android:onClick="@{()->vm.selectNum(2)}"
                android:text="@string/_2"
                android:textColor="@color/yellow"
                android:textSize="56sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tile3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="8dp"
                android:background="@drawable/shown_tile"
                android:fontFamily="@font/open_sans_bold"
                android:gravity="center"
                android:onClick="@{()->vm.selectNum(3)}"
                android:text="@string/_3"
                android:textColor="@color/yellow"
                android:textSize="56sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tile4"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="8dp"
                android:background="@drawable/shown_tile"
                android:fontFamily="@font/open_sans_bold"
                android:gravity="center"
                android:onClick="@{()->vm.selectNum(4)}"
                android:text="@string/_4"
                android:textColor="@color/yellow"
                android:textSize="56sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tile5"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="8dp"
                android:background="@drawable/shown_tile"
                android:fontFamily="@font/open_sans_bold"
                android:gravity="center"
                android:onClick="@{()->vm.selectNum(5)}"
                android:text="@string/_5"
                android:textColor="@color/yellow"
                android:textSize="56sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tile6"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="8dp"
                android:background="@drawable/shown_tile"
                android:fontFamily="@font/open_sans_bold"
                android:gravity="center"
                android:onClick="@{()->vm.selectNum(6)}"
                android:text="@string/_6"
                android:textColor="@color/yellow"
                android:textSize="56sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tile7"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="8dp"
                android:background="@drawable/shown_tile"
                android:fontFamily="@font/open_sans_bold"
                android:gravity="center"
                android:onClick="@{()->vm.selectNum(7)}"
                android:text="@string/_7"
                android:textColor="@color/yellow"
                android:textSize="56sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tile8"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="8dp"
                android:background="@drawable/shown_tile"
                android:fontFamily="@font/open_sans_bold"
                android:gravity="center"
                android:onClick="@{()->vm.selectNum(8)}"
                android:text="@string/_8"
                android:textColor="@color/yellow"
                android:textSize="56sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tile9"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="8dp"
                android:background="@drawable/shown_tile"
                android:fontFamily="@font/open_sans_bold"
                android:gravity="center"
                android:onClick="@{()->vm.selectNum(9)}"
                android:text="@string/_9"
                android:textColor="@color/yellow"
                android:textSize="56sp" />

        </GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>